--- a/HTML y CSS/Formularios/index.html
+++ b/HTML y CSS/Formularios/index.html
@@ -9,9 +9,13 @@
 <body>
     <form action="/login">
         <label for="name">Nombre: </label>
-        <input type="text" id="name" name="nombre" />
+        <input type="text" id="name" name="nombre" required/>
         <label for="lastname">Apellido: </label>
-        <input type="text" id="lastname" name="apellido" />
+        <input type="text" id="lastname" name="apellido" required/>
+        <label for="email">Correo: </label>
+        <input type="email" id="email" name="correo" placeholder="user@email.com" required/>
+        <label for="password">Contraseña</label>
+        <input type="password" id="password" name="contraseña" placeholder="Ingresa tu contraseña." size="10" required/>
         <label for="comment">
             Comentario: 
             <textarea name="Comentario" id="comment" cols="30" rows="10"
@@ -26,6 +30,17 @@
                 <option value="pink">Rosado</option>
             </select>
         </label>
+        <label for="terms">Términos y condiciones</label>
+        <input type="checkbox" id="terms" name="terms" required/>
+        <fieldset>
+            <label for="radio-1">Radio 1</label>
+            <input type="radio" id="radio-1" name="radio-options" />
+            <label for="radio-2">Radio 2</label>
+            <input type="radio" id="radio-2" name="radio-options" />
+            <label for="radio-3">Radio 3</label>
+            <input type="radio" id="radio-3" name="radio-options" />
+        </fieldset>
+        <button type="submit">Enviar Formulario</button>
     </form>
 </body>
 </html>
