pocisionamiento css ejercicio

--- a/HTML y CSS/Posicionamiento/ejercicio/index.html
+++ b/HTML y CSS/Posicionamiento/ejercicio/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    <div class="head">
-        <div class="eye">
-            <div class="pupil"></div>
+    <div class="container">
+        <div class="left">
+            <div class="person">
+                <div class="head">
+                    <div class="eye">
+                        <div class="pupil"></div>
+                    </div>
+                    <div class="mouth"></div>
+                </div>
+                <div class="body">
+                    <div class="arm"></div>
+                </div>
+            </div>
         </div>
-        <div class="mouth"></div>
+        <div class="right">
+            <p class="message">!Aprendiendo de posicionamiento con CSS¡</p>
+        </div>
     </div>
-    <div class="body">
-        <div class="arm"></div>
-    </div>
-    <p>!Aprendiendo de posicionamiento con CSS¡</p>
 </body>
+
 </html>
